--- a/src/index.html
+++ b/src/index.html
@@ -5,57 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Anciencraft | Servidor Minecraft</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Minecraft&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-  <header>
-    <h1>ANCIENCRAFT</h1>
-    <p class="subtitle">¡Únete a la aventura épica en Minecraft!</p>
-    
-    <div class="player-count" id="playerCount">Jugadores online: <span id="count">0</span>/50</div>
+  <!-- Partículas de fondo (opcional: usa canvas para polvo, fuego, etc.) -->
+  <div id="particles"></div>
 
-    <div class="btn-group">
-      <a href="#" class="btn" id="registerBtn">:Register</a>
-      <a href="https://discord.gg/jMerJQ89" target="_blank" class="btn btn-discord">:Discord</a>
+  <!-- Logo principal animado -->
+  <div class="logo-container">
+    <h1 class="logo">ANCIENCRAFT</h1>
+    <div class="logo-sub">🏰 Servidor Épico de Minecraft</div>
+  </div>
+
+  <!-- Barra superior: jugadores, staff -->
+  <div class="top-bar">
+    <div class="player-count">
+      <span class="icon">👤</span>
+      <span id="playerDisplay">Cargando...</span>
     </div>
-  </header>
+    <div class="staff-info">
+      <span>👑 Dueño: <strong>TheKingAJRH</strong></span>
+      <span>🛡️ Sub-dueño: <strong>AlproYT</strong></span>
+    </div>
+  </div>
 
-  <main>
-    <section class="card">
-      <h2>🏰 Reglas del Servidor</h2>
-      <div class="rules">
-        <ol>
-          <li>⛔ Prohibido el grief (destruir construcciones ajenas sin permiso).</li>
-          <li>⛔ No usar hacks, cheats o modificaciones injustas (X-ray, fly, etc.).</li>
-          <li>✅ Respeto absoluto entre jugadores. Sin insultos, spam ni acoso.</li>
-          <li>✅ PvP solo en zonas permitidas o con consentimiento.</li>
-          <li>✅ Construye, colabora y ¡diviértete con la comunidad!</li>
-          <li>✅ Usa "/report [motivo]" para denunciar abusos.</li>
-        </ol>
-      </div>
-    </section>
+  <!-- Contenedor principal (modo tarjetas) -->
+  <main class="main-grid">
+    <!-- Tarjeta: Registro -->
+    <div class="card" id="registerCard">
+      <div class="card-icon">📝</div>
+      <h2>Regístrate</h2>
+      <p>Únete al reino y reclama tu lugar.</p>
+      <button class="btn primary" id="openRegisterBtn">Abrir Registro</button>
+    </div>
 
-    <section class="card">
-      <h2>🏪 Tienda (Próximamente)</h2>
-      <p class="store-text">
-        Pronto podrás canjear puntos por cosméticos, monturas únicas y más.<br>
-        ¡Sigue nuestras redes para novedades!
-      </p>
-    </section>
+    <!-- Tarjeta: Discord -->
+    <a href="https://discord.gg/jMerJQ89" target="_blank" class="card discord-card">
+      <div class="card-icon">💬</div>
+      <h2>Discord</h2>
+      <p>Únete a la comunidad oficial.</p>
+      <div class="btn secondary">Entrar</div>
+    </a>
 
-    <section class="card">
-      <h2>👑 Staff</h2>
-      <div class="staff">
-        <p>Dueño del servidor y web: <span>TheKingAJRH</span></p>
-        <p>Sub-dueño: <span>AlproYT</span></p>
-      </div>
-    </section>
+    <!-- Tarjeta: Mini-juego -->
+    <div class="card" id="gameCard">
+      <div class="card-icon">🎯</div>
+      <h2>Mini-juego</h2>
+      <p>¡Defiende la aldea del dragón!</p>
+      <button class="btn primary" id="startGameBtn">Jugar</button>
+    </div>
+
+    <!-- Tarjeta: Tienda -->
+    <div class="card">
+      <div class="card-icon">🛒</div>
+      <h2>Tienda</h2>
+      <p>Próximamente: cosméticos y ventajas.</p>
+      <div class="btn disabled">Próximamente</div>
+    </div>
   </main>
 
+  <!-- Modal de Registro -->
+  <div id="registerModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" id="closeRegisterModal">&times;</span>
+      <h2>🏰 Registro en Anciencraft</h2>
+      <form id="registerForm">
+        <div class="form-group">
+          <label for="mcName">Nombre de Minecraft *</label>
+          <input type="text" id="mcName" maxlength="16" required placeholder="Ej: Steve">
+        </div>
+        <div class="form-group">
+          <label for="email">Correo (opcional)</label>
+          <input type="email" id="email" placeholder="tu@email.com">
+        </div>
+        <button type="submit" class="btn large primary">✅ Registrarme</button>
+      </form>
+      <p id="formMessage"></p>
+    </div>
+  </div>
+
+  <!-- Modal de Mini-juego -->
+  <div id="gameModal" class="modal">
+    <div class="modal-content game-modal">
+      <span class="close-btn" id="closeGameModal">&times;</span>
+      <h2>🐉 ¡Defiende la Aldea!</h2>
+      <div id="gameArea">
+        <div id="dragon">🐉</div>
+        <div id="village">🏰</div>
+        <div id="score">Puntos: <span id="points">0</span></div>
+      </div>
+      <p class="game-instructions">¡Haz clic en el dragón para disparar flechas! 🏹</p>
+    </div>
+  </div>
+
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Anciencraft Studios — Servidor de Minecraft</p>
-    <p>IP del servidor: <strong>anciencraft</strong></p>
+    <p>© 2025 Anciencraft Studios | IP: <strong>anciencraft</strong></p>
+    <div class="rules-toggle" id="toggleRules">📜 Ver Reglas</div>
   </footer>
+
+  <!-- Panel de Reglas (oculto por defecto) -->
+  <div id="rulesPanel" class="rules-panel">
+    <div class="rules-content">
+      <h3>📜 Reglas del Servidor Anciencraft</h3>
+      <ol>
+        <li>⛔ Prohibido el grief sin consentimiento.</li>
+        <li>⛔ No usar hacks, X-ray, fly, etc.</li>
+        <li>✅ Respeto absoluto. Sin acoso ni spam.</li>
+        <li>✅ PvP solo en zonas designadas o con OK.</li>
+        <li>✅ Usa <code>/report [razón]</code> para denuncias.</li>
+        <li>✅ ¡Diviértete, construye y colabora!</li>
+      </ol>
+      <button id="closeRules" class="btn small secondary">Cerrar</button>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
