--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
       </div>
     </div>
 
-    <!-- Dueños -->
+    <!-- Dueños (✅ con UUIDs reales) -->
     <div class="floating-characters">
       <div class="char theking" title="TheKingAJRH - Owner">
-        <img src="https://crafatar.com/renders/body/550e8400-e29b-41d4-a716-446655440001?overlay=true" alt="TheKingAJRH">
+        <img src="https://crafatar.com/renders/body/3822c135-781e-4719-b69a-157b8cd3d0cc?overlay=true" alt="TheKingAJRH">
         <div class="char-name">TheKingAJRH</div>
         <div class="char-role">👑 Owner</div>
       </div>
       <div class="char alpro" title="AlproYT - Sub-Owner">
-        <img src="https://crafatar.com/renders/body/123e4567-e89b-12d3-a456-426614174000?overlay=true" alt="AlproYT">
+        <img src="https://crafatar.com/renders/body/f48c2924-00ce-4d86-ac6d-b0e4b8a29582?overlay=true" alt="AlproYT">
         <div class="char-name">AlproYT</div>
         <div class="char-role">🛡️ Sub-Owner</div>
       </div>
@@ -104,7 +104,7 @@
       <div class="leaders-grid">
         <div class="leader-card owner">
           <div class="leader-avatar">
-            <img src="https://crafatar.com/renders/body/550e8400-e29b-41d4-a716-446655440001?overlay=true" alt="TheKingAJRH">
+            <img src="https://crafatar.com/renders/body/3822c135-781e-4719-b69a-157b8cd3d0cc?overlay=true" alt="TheKingAJRH">
           </div>
           <h3>TheKingAJRH</h3>
           <div class="leader-role">👑 Fundador & Owner</div>
@@ -112,7 +112,7 @@
         </div>
         <div class="leader-card subowner">
           <div class="leader-avatar">
-            <img src="https://crafatar.com/renders/body/123e4567-e89b-12d3-a456-426614174000?overlay=true" alt="AlproYT">
+            <img src="https://crafatar.com/renders/body/f48c2924-00ce-4d86-ac6d-b0e4b8a29582?overlay=true" alt="AlproYT">
           </div>
           <h3>AlproYT</h3>
           <div class="leader-role">🛡️ Sub-Owner</div>
@@ -122,7 +122,7 @@
     </div>
   </section>
 
-  <!-- Top Players -->
+  <!-- Top Players (✅ ahora con DominicanaOHIO como #3) -->
   <section id="top" class="section top-players">
     <div class="container">
       <h2 class="section-title">Top Supervivientes</h2>
@@ -131,7 +131,7 @@
         <div class="podium-slot second">
           <div class="player-card">
             <div class="player-avatar-wrapper">
-              <img src="https://crafatar.com/renders/body/123e4567-e89b-12d3-a456-426614174000?overlay=true" alt="AlproYT">
+              <img src="https://crafatar.com/renders/body/f48c2924-00ce-4d86-ac6d-b0e4b8a29582?overlay=true" alt="AlproYT">
             </div>
             <div class="player-info">
               <div class="player-name">AlproYT</div>
@@ -143,7 +143,7 @@
           <div class="player-card top">
             <div class="crown">👑</div>
             <div class="player-avatar-wrapper">
-              <img src="https://crafatar.com/renders/body/550e8400-e29b-41d4-a716-446655440001?overlay=true" alt="TheKingAJRH">
+              <img src="https://crafatar.com/renders/body/3822c135-781e-4719-b69a-157b8cd3d0cc?overlay=true" alt="TheKingAJRH">
             </div>
             <div class="player-info">
               <div class="player-name">TheKingAJRH</div>
@@ -154,10 +154,10 @@
         <div class="podium-slot third">
           <div class="player-card">
             <div class="player-avatar-wrapper">
-              <img src="https://crafatar.com/renders/body/abcdef12-3456-7890-abcd-ef1234567890?overlay=true" alt="Rook">
+              <img src="https://crafatar.com/renders/body/76684784-fa7c-4f00-bebf-4efce6d31bb6?overlay=true" alt="DominicanaOHIO">
             </div>
             <div class="player-info">
-              <div class="player-name">Rook</div>
+              <div class="player-name">DominicanaOHIO</div>
               <div class="player-stats">421 kills • Lvl 61</div>
             </div>
           </div>
@@ -235,7 +235,7 @@
     </div>
   </section>
 
-  <!-- ✅ PERFIL DE USUARIO (oculto por defecto) -->
+  <!-- PERFIL DE USUARIO -->
   <section id="perfil" class="section profile-section hidden">
     <div class="container">
       <h2 class="section-title">👤 Mi Perfil</h2>
@@ -270,7 +270,7 @@
     </div>
   </section>
 
-  <!-- ✅ MODAL: Login / Register -->
+  <!-- MODAL: Login / Register -->
   <div id="auth-modal" class="modal">
     <div class="modal-content">
       <button id="close-modal" class="close-btn">&times;</button>
